Css tweak som fikser issue med z-index i duplikatsjekk

--- a/src/duplicates/DuplicateSearch.less
+++ b/src/duplicates/DuplicateSearch.less
@@ -4,7 +4,7 @@
   border-bottom: @navGra20 1px solid;
   background: #d9e8f7;
   box-shadow: 0 0 3px 1px @navGra20;
-  z-index: 1;
+  z-index: 2;
   padding: 2rem 1.25rem 1.25rem;
 }
 
